--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "framer-motion": "^12.29.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.563.0",
+    "motion": "^12.31.0",
     "next-themes": "^0.4.6",
     "prismjs": "^1.30.0",
     "react": "^19.2.0",
@@ -63,6 +64,7 @@
     "react-hook-form": "^7.71.1",
     "react-resizable-panels": "^2.0.19",
     "react-router-dom": "^7.13.0",
+    "react-use-measure": "^2.1.7",
     "recharts": "^3.7.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
