--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "lucide-react": "^0.563.0",
     "motion": "^12.31.0",
     "next-themes": "^0.4.6",
+    "p5": "^2.2.0",
     "prismjs": "^1.30.0",
     "react": "^19.2.0",
     "react-day-picker": "^9.13.0",
@@ -69,6 +70,8 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.134.0",
+    "vanta": "^0.5.24",
     "vaul": "^1.1.2",
     "zod": "^4.3.6"
   },
@@ -78,6 +81,7 @@
     "@testing-library/react": "^16.3.2",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
+    "@types/three": "^0.134.0",
     "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.23",
     "eslint": "^9.39.1",
