--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "design-system-bundle",
+  "name": "nadicode-design-system",
   "private": true,
   "version": "0.0.0",
   "type": "module",
