--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "bin": {
+    "seed-design": "./bin/init.mjs"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
