--- a/package.json
+++ b/package.json
@@ -10,8 +10,18 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "typecheck": "tsc -b",
     "test": "vitest run",
-    "preview": "vite preview"
+    "test:all": "npm run typecheck && npm run lint && vitest run",
+    "preview": "vite preview",
+    "precommit": "npm run typecheck && npx lint-staged && vitest run",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix"
+    ]
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -63,12 +73,11 @@
     "next-themes": "^0.4.6",
     "p5": "^2.2.0",
     "prismjs": "^1.30.0",
-    "react": "^19.2.0",
+    "react": "^19.2.4",
     "react-day-picker": "^9.13.0",
-    "react-dom": "^19.2.0",
+    "react-dom": "^19.2.4",
     "react-hook-form": "^7.71.1",
     "react-resizable-panels": "^2.0.19",
-    "react-router-dom": "^7.13.0",
     "react-use-measure": "^2.1.7",
     "recharts": "^3.7.0",
     "sonner": "^2.0.7",
@@ -93,8 +102,11 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "husky": "^9.1.7",
     "jsdom": "^27.4.0",
+    "lint-staged": "^16.2.7",
     "postcss": "^8.5.6",
+    "react-router-dom": "^7.13.0",
     "tailwindcss": "^4.1.18",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
