--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "typecheck": "tsc -b",
     "test": "vitest run",
     "test:all": "npm run typecheck && npm run lint && vitest run",
+    "test:sync": "bash bin/test-sync.sh",
     "preview": "vite preview",
     "precommit": "npm run typecheck && npx lint-staged && vitest run",
     "prepare": "husky"
