chore: fix generate_css lint errors and update gitignore
Remove dead code (lightVars, processSection, updateVariables), replace
any types with typeof colorTokens.light, add gitignore entries for
plans/ and tsconfig.tsbuildinfo.

--- a/.gitignore
+++ b/.gitignore
@@ -27,5 +27,11 @@ next-env.d.ts
 *.njsproj
 *.sln
 *.sw?
+# Build artifacts
+tsconfig.tsbuildinfo
+
+# Plans (auto-generated)
+plans/
+
 # next-agents-md
 .next-docs/
