--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "seed-design": "./bin/init.mjs"
   },
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbopack --port 5001",
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
