test(ci): enforce design-system quality gates

--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "@vitejs/plugin-react": "^5.1.1",
     "@vitest/coverage-v8": "^4.0.18",
     "autoprefixer": "^10.4.23",
+    "axe-core": "^4.11.1",
     "eslint": "^9.39.1",
     "globals": "^16.5.0",
     "husky": "^9.1.7",
