--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "typecheck": "tsc --noEmit",
     "test": "vitest run",
     "test:all": "npm run typecheck && npm run lint && vitest run",
+    "ds:check": "node scripts/ds-check.mjs",
+    "ds:task-pack": "node scripts/ds-generate-task-pack.mjs",
     "docs:check": "node scripts/docs-check.mjs",
     "docs:inventory": "node scripts/docs-inventory.mjs",
     "test:sync": "bash bin/test-sync.sh",
