chore: limit lint-staged scope to design-system files

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "prepare": "husky"
   },
   "lint-staged": {
-    "*.{ts,tsx}": [
+    "{src,scripts,bin}/**/*.{ts,tsx}": [
       "eslint --fix"
     ]
   },
