--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "docs:check": "node scripts/docs-check.mjs",
     "docs:inventory": "node scripts/docs-inventory.mjs",
     "scaffold:sync": "cd apps/scaffold && node ../../bin/init.mjs --update --skip-deps",
-    "scaffold:check-sync": "npm run scaffold:sync && git diff --exit-code -- apps/scaffold",
+    "scaffold:check-sync": "npm run scaffold:sync && git diff --exit-code -- apps/scaffold ':(exclude)apps/scaffold/.seed-version'",
     "scaffold:typecheck": "npm --prefix apps/scaffold run typecheck",
     "scaffold:lint": "npm --prefix apps/scaffold run lint",
     "scaffold:test": "npm --prefix apps/scaffold run test:unit",
     "scaffold:build": "npm --prefix apps/scaffold run build",
-    "precommit": "npm run typecheck && npx lint-staged && vitest run",
+    "precommit": "npm run typecheck && npx lint-staged && npm run ds:check && npm run docs:check && vitest run",
     "prepare": "husky"
   },
   "lint-staged": {
