--- a/package.json
+++ b/package.json
@@ -19,16 +19,17 @@
     "test": "vitest run",
     "test:all": "npm run typecheck && npm run lint && vitest run",
     "ds:check": "node scripts/ds-check.mjs",
+    "ds:ast-check": "node scripts/ds-ast-check.mjs",
     "ds:task-pack": "node scripts/ds-generate-task-pack.mjs",
     "docs:check": "node scripts/docs-check.mjs",
     "docs:inventory": "node scripts/docs-inventory.mjs",
     "scaffold:sync": "cd apps/scaffold && node ../../bin/init.mjs --update --skip-deps",
-    "scaffold:check-sync": "npm run scaffold:sync && git diff --exit-code -- apps/scaffold ':(exclude)apps/scaffold/.seed-version'",
+    "scaffold:check-sync": "node scripts/scaffold-check-sync.mjs",
     "scaffold:typecheck": "npm --prefix apps/scaffold run typecheck",
     "scaffold:lint": "npm --prefix apps/scaffold run lint",
     "scaffold:test": "npm --prefix apps/scaffold run test:unit",
     "scaffold:build": "npm --prefix apps/scaffold run build",
-    "precommit": "npm run typecheck && npx lint-staged && npm run ds:check && npm run docs:check && vitest run",
+    "precommit": "npm run typecheck && npx lint-staged && npm run ds:check && npm run ds:ast-check && npm run docs:check && vitest run",
     "prepare": "husky"
   },
   "lint-staged": {
