--- a/apps/scaffold/package.json
+++ b/apps/scaffold/package.json
@@ -16,10 +16,11 @@
     "test:coverage": "vitest run --coverage --configLoader runner",
     "test:e2e": "playwright test",
     "test:all": "npm run typecheck && npm run lint && vitest run --coverage --configLoader runner && playwright test",
-    "precommit": "npm run typecheck && npx lint-staged && npm run ds:check && vitest run --coverage --configLoader runner",
-    "ci": "npm run ds:check && npm run typecheck && npm run lint && npm run test:unit && npm run build",
+    "precommit": "npm run typecheck && npx lint-staged && npm run ds:check && npm run ds:ast-check && vitest run --coverage --configLoader runner",
+    "ci": "npm run ds:check && npm run ds:ast-check && npm run typecheck && npm run lint && npm run test:unit && npm run build",
     "prepare": "husky",
     "ds:check": "node scripts/ds-check.mjs",
+    "ds:ast-check": "node scripts/ds-ast-check.mjs",
     "ds:task-pack": "node scripts/ds-generate-task-pack.mjs"
   },
   "lint-staged": {
